--- a/src/pages/page.module.scss
+++ b/src/pages/page.module.scss
@@ -65,3 +65,26 @@
 }
 
 
+.error404 {
+  display: flex;
+  flex-direction: column;
+
+  h2 { 
+    font-weight: 100;
+    margin: 45px;
+    text-align: center;
+    font-size: 165px;
+    text-shadow: #8d8ec5 3px 5px 10px;
+
+  }
+
+  p{ 
+    margin: auto;
+    display: block;
+    text-align: center;
+    font-size: 42px;
+    font-weight: 100;
+    opacity: .4;
+  }
+}
+
