--- a/src/components/layout/footer/footer.module.scss
+++ b/src/components/layout/footer/footer.module.scss
@@ -1,11 +1,12 @@
 .footer {
-  margin-top: 50px;
+  margin-top: 100px;
+  position: relative;
 
   .disclaimer {
     color: #4a5a6a;
-    position: relative;
-    bottom: 0;
-    left: 10px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
     font-size: 12px;
     text-align: center;
   }
