--- a/src/components/experiences/experiences.module.scss
+++ b/src/components/experiences/experiences.module.scss
@@ -1,5 +1,6 @@
 .container {
-  max-width: 800px;
+  max-width: 830px;
   margin: auto;
-  color: #8d8ebd  ;
+  color: #8d8ebd;
+  padding: 15px;
 }
