--- a/src/components/contact-form/modal.module.scss
+++ b/src/components/contact-form/modal.module.scss
@@ -6,11 +6,14 @@
   top: 0;
   left: 0;
   z-index:10;
+  transition: 400ms;
 }
 
 .modal {
   background: linear-gradient(310deg, rgba(255, 137, 102, 0.3), rgba(255, 68, 109, 0.7));
   position: fixed;
+  max-width: 90%;
+  transition: 400ms;
   width: 500px;
   top: 50%;
   left: 50%;
