--- a/src/pages/about/about.module.scss
+++ b/src/pages/about/about.module.scss
@@ -1,5 +1,3 @@
-
-
 .profile {
   display: flex;
   max-width: 1000px;
@@ -35,6 +33,23 @@
       margin: 10px;
       font-weight: 300;
       font-size: 16px;
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .profile {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+
+    img {
+      width: 250px;
+      margin: auto;
+    }
+
+    .profileDescription {
+      margin: 20px;
     }
   }
 }
