--- a/src/components/layout/button/button.module.scss
+++ b/src/components/layout/button/button.module.scss
@@ -1,22 +1,23 @@
+@import "../../../styles/colors.scss";
+
 .button {
   border: solid 1px;
   cursor: pointer;
-  border-image: linear-gradient(270deg, #ff8966, #e5446d 90%) 1;
+  border-image: $gradient 1;
   text-decoration: none;
   font-size: 15px;
   margin: 0 15px;
-  color: #5d5e9d;
+  color: $secondary;
   padding: 10px 15px;
-  background: linear-gradient(310deg, #ff8966, #e5446d 90%) border-box;
-  opacity: .9;
+  background: $gradient;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   transition: 300ms;
   &:hover {
-    background-color: #5d5e9d;
+    background-color: $secondary;
     opacity: 1;
-    background: linear-gradient(270deg, #ff8966, #e5446d 90%) border-box;
-    color: #1d1e2d;
-    -webkit-text-fill-color: #1d1e2d;
+    background: $gradient border-box;
+    color: $border-color;
+    -webkit-text-fill-color: $border-color;
   }
 }
