--- a/src/components/layout/language-toggler/language-toggler.module.scss
+++ b/src/components/layout/language-toggler/language-toggler.module.scss
@@ -1,16 +1,18 @@
+@import "../../../styles/colors.scss";
+
 .localeSelector {
   display: flex;
   margin: 0 0 0 20px;
   padding-left: 25px;
   padding-top: 5px;
   padding-bottom: 5px;
-  border-left: solid 1px #1d1e2d;
+  border-left: solid 1px $site-backround-color;
 }
 
 .localeLink,.activeLocale {
-  color: #8d8ebd;
+  color: $header-colors;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 100;
   margin: 0 10px;
   transition: 300ms;
@@ -18,14 +20,14 @@
   border-bottom: solid 1px transparent;
 
   &:hover {
-    color: #adaeed;
     transform: scale(1.5);
   }
 }
 
 .activeLocale {
   transform: scale(1.4);
-  border-bottom-color:  #8d8ebd;
+  color: $callout-color;
+  border-bottom-color:  $callout-color;
 }
 
 @media screen and (max-width: 400px) {
@@ -34,8 +36,8 @@
     margin: 25px 0;
     padding-left: 0;
     padding: 25px 60px 25px;
-    border-top: solid 1px #1d1e2d;
-    border-bottom: solid 1px #1d1e2d;
+    border-top: solid 1px $border-color;
+    border-bottom: solid 1px $border-color;
     border-left: none;
   }
 }
