--- a/src/components/contact-form/modal.module.scss
+++ b/src/components/contact-form/modal.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/colors.scss";
+
 .mask {
   position: fixed;
   background-color: rgba(30,30,50,.9);
@@ -28,6 +30,7 @@
     margin: 25px;
     font-size: 28px;
     font-weight: 100;
+    color: $white-text-color;
   }
 
   .transparentButton {
