--- a/src/components/project-card/project-card.module.scss
+++ b/src/components/project-card/project-card.module.scss
@@ -7,13 +7,21 @@
   margin: 35px auto;
   position: relative;
 
+
+
   .imagesCarousel {
     width: 300px;
     position: relative;
+    padding: 15px;
+    min-height: 150px;
+    background-color: $border-color;
+    border-radius: 10px;
 
-    img {
-      max-width: 100%;
-      height: initial;
+    .picture {
+      width: 200px;
+      margin: auto;
+      min-height: 150px;
+      position: relative;
     }
   }
 
@@ -47,12 +55,12 @@
   }
 
   .tag {
-    background: lighten($callout-color, $amount: 15) ;
+    background: lighten($callout-color, $amount: 15);
     padding: 5px 15px;
     font-size: 12px;
     border-radius: 0 55px 0 55px;
     color: $primary;
-    opacity: .9;
+    opacity: 0.9;
     transition: 300ms;
     margin: 3px;
 
@@ -84,17 +92,23 @@
 
 @media (prefers-color-scheme: dark) {
   .card {
+    .imagesCarousel {
+      background-color: $border-color;
+      padding: 10px;
+      border-radius: 10px;
+      box-sizing: border-box;
+    }
 
     .info {
       color: $dark-tertiary;
-  
-    .tag {
-      background: $callout-color;
-      color: #000;
-      letter-spacing: 1px;
+
+      .tag {
+        background: $callout-color;
+        color: #000;
+        letter-spacing: 1px;
+      }
     }
   }
-}
 }
 @media screen and (max-width: 450px) {
   .card {
@@ -106,7 +120,7 @@
     .imagesCarousel {
       width: 300px;
       margin: auto;
-  
+
       img {
         max-width: 100%;
       }
